--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,24 +1,12 @@
-<!-- <mat-form-field>
-  <input matInput [(ngModel)]="userInput" placeholder="Ask something...">
-</mat-form-field>
-<button mat-raised-button (click)="sendMessage()">Send</button>
-
-<div>
-  @for (msg of messages; track msg){
-  <mat-card>{{ msg }}</mat-card>
-  }
-</div> -->
-
-<!-- <div class="input-wrapper">
-    <label class="input-label" for="userInput">Your Message</label>
-    <input type="text" id="userInput" placeholder="Type something thoughtful...">
-  </div> -->
-  <div>
-  @for (msg of messages; track msg){
-  <div>{{ msg }}</div>
-  }
+<div class = "container">
+ <div class="msg"
+     *ngFor="let msg of messages; let i = index"
+     [ngStyle]="{ 'background-color': getColor(i) }">
+  {{ msg }}
 </div> 
-  
+</div>
+ 
+<br><br>
   <mat-card class ="custom-card">
     <mat-card-content>
      <mat-form-field appearance = "outline" class ="custom-input">
