--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -56,3 +56,21 @@
   50% { transform: scale(1.5); opacity: 0.5; }
   100% { transform: scale(1); opacity: 1; }
 }
+
+@media only screen and (max-width: 480px) {
+  .custom-card{
+    /* width:200px; */
+    max-width:none;
+  }
+  .custom-input{
+    max-width:none;
+    margin-left: 25%;
+    width:70%;
+  }
+  .align-btn{
+    padding-left: 25%;
+  }
+  .msg{
+    margin-left:20%;
+  }
+}
