--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -11,7 +11,8 @@
       <input matInput [(ngModel)]="userInput" placeholder="Ask anything...">
     </mat-form-field>
   </mat-card-content>
-  <mat-card-actions>
+  <mat-card-actions class ="align-btn">
+    <button mat-raised-button (click)="clearMessage()">New</button>
     <button mat-raised-button (click)="sendMessage()">Send</button>
     <button mat-raised-button (click)="startListening()">🎤 Speak</button>
     <div *ngIf="isListening" class="listening-indicator">
